Final_Project/CircularBufferSplit _2/src/log.txt
gcc -c -o obj/client.o client.c -Wall -O0 -lpthread -lrt -I../inc
client.c: In function ‘SocketInit’:
client.c:8:2: error: ‘socket_read’ undeclared (first use in this function); did you mean ‘socket_send’?
  socket_read = 99;
  ^~~~~~~~~~~
  socket_send
client.c:8:2: note: each undeclared identifier is reported only once for each function it appears in
client.c: In function ‘ConnectToServer’:
client.c:16:15: warning: implicit declaration of function ‘gethostbyname’; did you mean ‘gethostname’? [-Wimplicit-function-declaration]
  server_ptr = gethostbyname(SERVER_ADDR);
               ^~~~~~~~~~~~~
               gethostname
client.c:16:13: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
  server_ptr = gethostbyname(SERVER_ADDR);
             ^
client.c:19:40: error: dereferencing pointer to incomplete type ‘struct hostent’
     memcpy(&server.sin_addr, server_ptr->h_addr, server_ptr->h_length);
                                        ^~
client.c: In function ‘SendToServer’:
client.c:38:7: error: ‘socket_read’ undeclared (first use in this function); did you mean ‘socket_send’?
   if((socket_read+1)%100 == circ_write)
       ^~~~~~~~~~~
       socket_send
client.c:44:14: error: incompatible type for argument 2 of ‘send’
   send(sock, socket_send, sizeof(struct COMMON_IMG_PROC), 0);

